# sdf-engine

./: CMakeLists.txt
src/: camera.h  computeshader.glsl  computeshader.h  glad.c  glad.h  main.cpp  scene.h  test.py
src/shaders/compute/: computeshader.glsl  lighting.glsl
src/vera/: fs.cpp  string.cpp
textures/: texture-lumper.py
textures/wood/: wood_0056_description.txt  wood_0056_keywords.txt
